hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_lambda_wildcard_in_body.php.exp
ERROR: File "polymorphic_lambda_wildcard_in_body.php", line 13, characters 34-34:
Wildcard typehints are not allowed in this position (Naming[2084])
